--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>To Do | To Do | or die...</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div class="container">
+    <div class="input">
+      <form>
+        <input type='text' name='list-item' />
+        <input type='date' name='due-date' />
+        <button type="submit">Add Item</button>
+      </form>
+    </div>
+    <div class="list"></div>
+  </div>
 </body>
 </html>
