ToDo List working - requirements met

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
   <div class="container">
+    <h1>Things that need doing</h1>
+    <p>Add 'em on and knock 'em out</p>
     <div class="input">
       <form>
-        <input type='text' name='list-item' />
-        <input type='date' name='due-date' />
+        <label for="list-item">Thing to do: <input type='text' name='list-item' /></label>
+        <label for="due-date">When it needs done by: <input type='date' name='due-date' /></label>
         <button type="submit">Add Item</button>
       </form>
     </div>
@@ -21,3 +23,4 @@
   </div>
 </body>
 </html>
+
