added a little 1998 style and a date helper function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="input">
       <form>
         <label for="list-item">Thing to do: <input type='text' name='list-item' /></label>
-        <label for="due-date">When it needs done by: <input type='date' name='due-date' /></label>
+        <label for="due-date">When it needs done by: <input type='date' name='due-date' /></label><br>
         <button type="submit">Add Item</button>
       </form>
     </div>
